; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/winmm/extr_mcicda.c_MSF_Add.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/winmm/extr_mcicda.c_MSF_Add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CDFRAMES_PERSEC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @MSF_Add to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @MSF_Add(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %9 = load i32, i32* %3, align 4
  %10 = call i32 @MCI_MSF_FRAME(i32 %9)
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @MCI_MSF_FRAME(i32 %11)
  %13 = add nsw i32 %10, %12
  store i32 %13, i32* %8, align 4
  %14 = load i32, i32* %8, align 4
  %15 = load i32, i32* @CDFRAMES_PERSEC, align 4
  %16 = sdiv i32 %14, %15
  store i32 %16, i32* %5, align 4
  %17 = load i32, i32* %8, align 4
  %18 = load i32, i32* @CDFRAMES_PERSEC, align 4
  %19 = srem i32 %17, %18
  store i32 %19, i32* %8, align 4
  %20 = load i32, i32* %3, align 4
  %21 = call i32 @MCI_MSF_SECOND(i32 %20)
  %22 = load i32, i32* %4, align 4
  %23 = call i32 @MCI_MSF_SECOND(i32 %22)
  %24 = add nsw i32 %21, %23
  %25 = load i32, i32* %5, align 4
  %26 = add nsw i32 %24, %25
  store i32 %26, i32* %7, align 4
  %27 = load i32, i32* %7, align 4
  %28 = sdiv i32 %27, 60
  store i32 %28, i32* %5, align 4
  %29 = load i32, i32* %7, align 4
  %30 = srem i32 %29, 60
  store i32 %30, i32* %7, align 4
  %31 = load i32, i32* %3, align 4
  %32 = call i32 @MCI_MSF_MINUTE(i32 %31)
  %33 = load i32, i32* %4, align 4
  %34 = call i32 @MCI_MSF_MINUTE(i32 %33)
  %35 = add nsw i32 %32, %34
  %36 = load i32, i32* %5, align 4
  %37 = add nsw i32 %35, %36
  store i32 %37, i32* %6, align 4
  %38 = load i32, i32* %6, align 4
  %39 = load i32, i32* %7, align 4
  %40 = load i32, i32* %8, align 4
  %41 = call i32 @MCI_MAKE_MSF(i32 %38, i32 %39, i32 %40)
  ret i32 %41
}

declare dso_local i32 @MCI_MSF_FRAME(i32) #1

declare dso_local i32 @MCI_MSF_SECOND(i32) #1

declare dso_local i32 @MCI_MSF_MINUTE(i32) #1

declare dso_local i32 @MCI_MAKE_MSF(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
